--- a/HackatOrgan.csproj
+++ b/HackatOrgan.csproj
@@ -6,6 +6,10 @@
     <UseWindowsForms>true</UseWindowsForms>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <OutputPath>C:\Users\aabderrahmann\Pictures\</OutputPath>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="iTextSharp.LGPLv2.Core" Version="1.7.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.11" />
